Fix photoModal cannot scroll when its content is too long.

--- a/flickr/static/css/mycss.css
+++ b/flickr/static/css/mycss.css
@@ -121,3 +121,7 @@
         column-gap: .15rem;
     }
 }
+
+#photoModal {
+    overflow-y: scroll;
+}
